# AIOCR

./: .gitignore  pyproject.toml  settings.toml.example
aiocr/: errors.py  loggers.py  main.py  ocr.py  services.py
