[tool.poetry]
name = "aiocr"
version = "0.1.0"
description = ""
authors = ["Aleksey Kravtsun <kravtsun.aleksey@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.72.0"
openpyxl = "^3.1.5"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
